--- a/Client/style.css
+++ b/Client/style.css
@@ -4,13 +4,13 @@
 }
 
 
-html{
+html {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
 .hero {
-    background-image: url(Assets/bg.jpeg);
+    background-image: url(Assets/pexels-todd-trapani-1382102.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 90vh;
@@ -64,7 +64,7 @@ html{
     height: 15vh;
 }
 
-.navText{
+.navText {
     padding-left: 15vw;
     padding-top: 1vw;
     list-style: none;
@@ -72,7 +72,7 @@ html{
     font-size: 10px;
 }
 
-#google_translate_element{
+#google_translate_element {
     padding-top: 2vw;
 }
 
@@ -113,230 +113,265 @@ ul>li>a:hover {
     border-bottom-color: #F7C35F;
 }
 
-ul>li:hover>ul.dropdown {
+.nav>ul>li:hover>ul.dropdown {
     display: block;
 }
-.aimodels{
+
+.aimodels {
     background-color: #334B35;
     height: 190vh;
 }
-#ai{
+
+#ai {
     text-align: center;
     color: #F8CC77;
-    font-family: 'roboto',sans-serif;
+    font-family: 'roboto', sans-serif;
     font-size: 50px;
     padding-top: 7vh;
     font-weight: 400;
 }
-#models{
+
+#models {
     background-color: #223017;
     height: 66vh;
-    width:85vw;
-    margin-top:6vh;
-    margin-left:3vw;
+    width: 85vw;
+    margin-top: 6vh;
+    margin-left: 3vw;
     padding-top: 7vh;
     padding-left: 8vw;
     border-radius: 10px;
     display: flex;
-    gap:3rem;
-    
-}
-.sec1{
-    background-image: url(Assets/model1.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 45vh;
-    width:20vw;
-    border:8px solid #FDFADE;
-    border-radius: 10px;
-}
-.sec2{
-    height: 56vh;
-    width:44vw;
-    padding-left: 10vw;
-    font-family: 'roboto',sans-serif;
+    gap: 3rem;
+
 }
 
-.sec3{
-    height: 56vh;
-    width:47vw;
-    padding-right: 10vw;
-    font-family: 'roboto',sans-serif;
-}
-.sec4{
-    background-image: url(Assets/fertiliser.jpeg);
+.sec1 {
+    background-image: url(Assets/pexels-tom-fisk-1483880.jpg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     height: 45vh;
-    width: 19vw;
-    border:8px solid #FDFADE;
+    width: 20vw;
+    border: 8px solid #FDFADE;
     border-radius: 10px;
 }
-#crm{
+
+.sec2 {
+    height: 56vh;
+    width: 44vw;
+    padding-left: 10vw;
+    font-family: 'roboto', sans-serif;
+}
+
+.sec3 {
+    height: 56vh;
+    width: 47vw;
+    padding-right: 10vw;
+    font-family: 'roboto', sans-serif;
+}
+
+.sec4 {
+    background-image: url(Assets/pexels-antony-trivet-12626272.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+    width: 19vw;
+    border: 8px solid #FDFADE;
+    border-radius: 10px;
+}
+
+#crm {
     font-weight: 500;
     font-size: 40px;
     color: #FEFADF;
 
 }
-#des1{
+
+#des1 {
     font-weight: 100;
     font-size: 23px;
     color: #F5F5F5;
 }
-#p1{
+
+#p1 {
     display: flex;
     gap: 1rem;
     color: #FFFFFF;
     font-size: 18px;
     font-weight: 150;
-    font-family: 'roboto',sans-serif;
+    font-family: 'roboto', sans-serif;
 }
-#btn{
+
+#btn {
     background-color: #D09632;
     border-radius: 20px;
-    padding:2vh 1vw 2vh 1vw;
+    padding: 2vh 1vw 2vh 1vw;
     color: #213118;
     line-height: 50%;
     font-weight: 600;
-    border-color:#D09632;
+    border-color: #D09632;
 }
-.news{
-    background-color:#283618;
+
+.news {
+    background-color: #283618;
     height: 96vh;
-    }
-    #article{
-        color: #F8CC77;
-        text-align: center;
-        font-family: 'roboto',sans-serif;
-        font-size: 50px;
-        padding-top: 7vh;
-        font-weight: 400;
-    }
-    .cards{
-        display: flex;
-        justify-content: space-evenly;
-        padding-top: 8vh;
-    }
-    .parent-cont{
-    height:58vh;
-    width:23vw;
+}
+
+#article {
+    color: #F8CC77;
+    text-align: center;
+    font-family: 'roboto', sans-serif;
+    font-size: 50px;
+    padding-top: 7vh;
+    font-weight: 400;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 8vh;
+}
+
+.parent-cont {
+    height: 58vh;
+    width: 23vw;
     border-radius: 0.5cm;
-    background-color: #5e6e46; 
-    }
-    
-    #newsimg{
-        height:35vh;
-        width:23vw;
-        border-radius: .2cm;
-    }
-    
-    .headline{
-        color:#283618;
-        margin: 20px 10px;
-        font-family: 'playful display',sans-serif ;
-        font-size: 22px;
-        font-weight: 400;
-    }
-    #btn{
-        background-color: #D09632;
-        border-radius: 20px;
-        padding:2vh 1vw 2vh 1vw;
-        color: #213118;
-        line-height: 50%;
-        font-weight: 600;
-        border-color:#D09632;
-        margin-left:8vw;
-        margin-top: 2vh;
-    }
-    .contact{
-        display: flex;
-        background-color: #5e6e46;
-        color: #fefae0;
-        padding-bottom: 3%;
-    }
-    #s1{
-        width: 50%;
-        padding-left: 16%;
-        padding-top: 3%;
-        
-    }
-    #s2{
-        padding-top: 6%;
-    }
-    #line1{
-        font-size: 26px;
-    }
-    #line2{
-        font-size: 36px;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bold;
-    }
-    #line3{
-        font-size: 18px;
-    }
-    .input{
-        padding-left: 2%;
-        opacity: 0.3;
-        background-color: rgb(3, 3, 3);
-        border-radius: 10px;
-        color: white;
-    }
-    #name{
-        height: 4vh;
-        width:27vw;
-    }
-    #phone{
-        height: 4vh;
-        width:27vw;
-    }
-    #email{
-        height: 4vh;
-        width:27vw;
-    }
-    #message{
-        height: 17vh;
-        width:27vw;
-    }
-    #select{
-        padding: 1vh 1vw;
-        background-color:#bc6c25;
-        color: black;
-        font-size: 13px;
-        border-radius: 15px;
-    }
-    #select:hover{
-        background-color: #b87a45;
-        cursor: pointer;
-    }
-    .footer{
-        background-color:#283618;
-        height: 50vh;
-        display: flex;
-        justify-content: space-evenly;
-        padding-top: 10vh;
-    }
-    #part1{
-        width:22vw;
-        color: #FFFFFF;}
-    #head{
-        font-size: 22px;
-        font-weight: 500;
-        font-family: 'Playfair Display',sans-serif;
-    }
-    #vis{
-        font-size: 16px;
-        font-weight: 100;
-        font-family: 'Times New Roman', Times, serif;
-    }
-    #part2>p{
-        font-family: 'livvic',sans-serif;
-        font-size: 20px;
-        font-weight:200;
-        color:#FFFFFF;
-    }
-    #part2>li{
-        font-family: 'Times New Roman', Times, serif;
-        font-weight: 100;
-        font-size: 16px;
-        color:#FFFFFF;
-    }
+    background-color: #5e6e46;
+}
+
+#newsimg {
+    height: 35vh;
+    width: 23vw;
+    border-radius: .2cm;
+}
+
+.headline {
+    color: #283618;
+    margin: 20px 10px;
+    font-family: 'playful display', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+#btn {
+    background-color: #D09632;
+    border-radius: 20px;
+    padding: 2vh 1vw 2vh 1vw;
+    color: #213118;
+    line-height: 50%;
+    font-weight: 600;
+    border-color: #D09632;
+    margin-left: 8vw;
+    margin-top: 2vh;
+}
+
+.contact {
+    display: flex;
+    background-color: #5e6e46;
+    color: #fefae0;
+    padding-bottom: 3%;
+}
+
+#s1 {
+    width: 50%;
+    padding-left: 16%;
+    padding-top: 3%;
+
+}
+
+#s2 {
+    padding-top: 6%;
+}
+
+#line1 {
+    font-size: 26px;
+}
+
+#line2 {
+    font-size: 36px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+#line3 {
+    font-size: 18px;
+}
+
+.input {
+    padding-left: 2%;
+    opacity: 0.3;
+    background-color: rgb(3, 3, 3);
+    border-radius: 10px;
+    color: white;
+}
+
+#name {
+    height: 4vh;
+    width: 27vw;
+}
+
+#phone {
+    height: 4vh;
+    width: 27vw;
+}
+
+#email {
+    height: 4vh;
+    width: 27vw;
+}
+
+#message {
+    height: 17vh;
+    width: 27vw;
+}
+
+#select {
+    padding: 1vh 1vw;
+    background-color: #bc6c25;
+    color: black;
+    font-size: 13px;
+    border-radius: 15px;
+}
+
+#select:hover {
+    background-color: #b87a45;
+    cursor: pointer;
+}
+
+.footer {
+    background-color: #283618;
+    height: 20vh;
+    padding-top: 10vh;
+    padding-left: 10vw;
+}
+
+#part1 {
+    width: 22vw;
+    color: #FFFFFF;
+}
+
+#head {
+    color: white;
+    font-size: 22px;
+    font-weight: 500;
+    font-family: 'Playfair Display', sans-serif;
+}
+
+.usefulLinks>div{
+    color: #5e6e46;
+}
+
+.usefulLinks>ul{
+    padding-top: 2px;
+    list-style: none;
+    display: flex;
+}
+
+.usefulLinks>ul>li{
+    padding: 0px 2px;
+    color: #5e6e46
+}
+
+.usefulLinks>ul>li>a{
+    text-decoration: none;
+    color: white;
+}
