--- a/Client/pages/style.css
+++ b/Client/pages/style.css
@@ -211,11 +211,12 @@ ul>li>a:hover {
 }
 
 .news {
-    background-color: #283618;
+    background-color: #334B35;
     height: 96vh;
 }
 
 #article {
+    background-color: #334B35;
     color: #F8CC77;
     text-align: center;
     font-family: 'roboto', sans-serif;
@@ -225,6 +226,7 @@ ul>li>a:hover {
 }
 
 .cards {
+    background-color: #334B35;
     display: flex;
     justify-content: space-evenly;
     padding-top: 8vh;
@@ -287,12 +289,16 @@ ul>li>a:hover {
 
 #line2 {
     font-size: 36px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
+    font-family: 'Playfair display', sans-serif;
+    font-weight: bolder;
+    color: #213118;
 }
 
-#line3 {
+.line3 {
     font-size: 18px;
+    color: #213118;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .input {
