--- a/Client/pages/templates/croprec.html
+++ b/Client/pages/templates/croprec.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div id="header">
-            <img id="logo" src="logo.png">
+            <img id="logo" src="../templates/logo.png">
         </div>
 
         <ul class="navText">
