--- a/Client/pages/templates/fert.html
+++ b/Client/pages/templates/fert.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div id="header">
-            <img id="logo" src="./logo.png">
+            <img id="logo" src="../templates/logo.png">
         </div>
 
         <ul class="navText">
@@ -27,8 +27,6 @@
                     <li><a href="#">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Facts</a></li>
             <li><a href="#">ChatBot</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
