--- a/Client/pages/templates/fert.html
+++ b/Client/pages/templates/fert.html
@@ -23,7 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="cropRec.html">Crop Recommendation Model</a></li>
+                    <li><a href="http://127.0.0.1:5000">Crop Recommendation Model</a></li>
                     <li><a href="#">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
