--- a/Client/pages/about.css
+++ b/Client/pages/about.css
@@ -3,7 +3,7 @@
     margin: 0%;
 }
 body{
-    background-color: #223017;
+    background-color: #42562b;
 }
 .abtimg{
     height:65vh;
@@ -44,15 +44,16 @@ hr{
 }
 h2{
     color: #F7C35F;
-    font-family: "roboto",sans-serif;
+    font-family: "playfair display",sans-serif;
 }
 h1{
     color: #f5f5f5;
     font-family: "playfair display",sans-serif;
 }
 .cnt{
-    font-size: 24px;
+    font-size: 23px;
     color: #f5f5f5;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 div>ol>li{
     margin-left: 2vw;
@@ -63,4 +64,129 @@ div>ul{
 .our{
     display: flex;
     gap:13rem;
+}
+
+
+#logo {
+    height: 5vw;
+    width: 5vw;
+    align-items: center;
+    padding: .5vw 1vw;
+}
+
+
+.nav {
+    background-color: #283618;
+    color: #fefae0;
+    display: flex;
+    height: 15vh;
+}
+
+.navText {
+    padding-left: 25vw;
+    padding-right: 10vw;
+    padding-top: 1vw;
+    list-style: none;
+    background: #283618;
+    font-size: 10px;
+}
+
+#google_translate_element {
+    padding-top: 2vw;
+}
+
+ul>li {
+    display: inline-block;
+    position: relative;
+}
+
+ul>li>a {
+    display: block;
+    padding: 20px 25px;
+    color: #FFF;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+}
+
+ul>li>ul.dropdown>li {
+    font-size: 8px;
+    padding: 0px 2vw;
+}
+
+ul>li>ul.dropdown {
+    border-radius: 15px;
+    background: #22301799;
+    position: absolute;
+    z-index: 999;
+    display: none;
+}
+
+ul>li>a:hover {
+    font-weight: bold;
+    padding-bottom: 10px;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    width: fit-content;
+    cursor: pointer;
+    border-bottom-color: #F7C35F;
+}
+
+.nav>ul>li:hover>ul.dropdown {
+    display: block;
+}
+
+
+.footer {
+    background-color: #283618;
+    height: 20vh;
+    padding-top: 10vh;
+    padding-left: 10vw;
+}
+
+#part1 {
+    width: 22vw;
+    color: #FFFFFF;
+}
+
+#head {
+    color: white;
+    font-size: 22px;
+    font-weight: 500;
+    font-family: 'Playfair Display', sans-serif;
+}
+
+.usefulLinks>div{
+    color: #5e6e46;
+}
+
+.usefulLinks>ul{
+    padding-top: 2px;
+    list-style: none;
+    display: flex;
+}
+
+.usefulLinks>ul>li{
+    padding: 0px 2px;
+    color: #5e6e46
+}
+
+.usefulLinks>ul>li>a{
+    text-decoration: none;
+    color: white;
+}
+
+.btn>a{
+    text-decoration: none;
+    color: black;
+}
+
+.uLinks>a{
+    font-size: 16px;
+    padding-bottom: 10vh;
+}
+
+#ulinkslist{
+    padding-left: 0px;
+    margin-left: 0px;
 }
